# PokiRock

./: .clang-format  .clang-tidy  LICENSE  README.md
src/: CMakeLists.txt  main.cpp  rename_later.cpp  rename_later.h  sources.h
src/build-origin-Desktop_Qt_5_12_12_MinGW_32_bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  object_script.origin.Debug  object_script.origin.Release  ui_Authorization_window.h  ui_First_window.h  ui_Main_menu.h  ui_Registration_window.h  ui_game.h
src/build-origin-Desktop_Qt_5_12_12_MinGW_32_bit-Debug/debug/: moc_Authorization_window.cpp  qmake_qmake_qm_files.qrc
src/build-origin-Desktop_Qt_5_12_12_MinGW_32_bit-Debug/release/: qmake_qmake_qm_files.qrc
src/build-origin-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.origin.Debug  object_script.origin.Release  ui_Authorization_window.h  ui_First_window.h  ui_Main_menu.h  ui_Registration_window.h  ui_game.h  ui_profile_window.h  ui_stickers_collection.h
src/build-origin-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/debug/: moc_Authorization_window.cpp  moc_First_window.cpp  moc_Main_menu.cpp  moc_Registration_window.cpp  moc_game.cpp  moc_profile_window.cpp  moc_stickers_collection.cpp  qmake_qmake_qm_files.qrc  qrc_qmake_qmake_qm_files.cpp
src/build-origin-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/release/: qmake_qmake_qm_files.qrc
src/client/: Client.cpp  Client.h  client.cpp  client.h  client_main.cpp  grpc_client.cpp  grpc_client.hpp  grpc_client_main.cpp  salt_hash.cpp  salt_hash.hpp
src/gui/: CMakeCache.txt  CMakeLists.txt  PokiRock.cbp  authorization_window.cpp  authorization_window.h  authorization_window.ui  clubs.qrc  cmake_install.cmake  diamonds.qrc  first_window.cpp  first_window.h  first_window.ui  game.cpp  game.h  game.ui  guys.qrc  hearts.qrc  main.cpp  main_menu.cpp  main_menu.h  main_menu.ui  origin.pro  other.qrc  profile_window.cpp  profile_window.h  profile_window.ui  registration_window.cpp  registration_window.h  registration_window.ui  spades.qrc  stickers.qrc  stickers_collection.cpp  stickers_collection.h  stickers_collection.ui  user.hpp  window_manager.h
src/gui/.cmake/api/v1/reply/: cache-v2-0d96796ce2ac0fbd7dad.json  cmakeFiles-v1-099a6885eaef8016e763.json  codemodel-v2-2a632ea6a56f00e21f7e.json  index-2023-05-29T14-08-52-0670.json  target-PokiRock-Debug-22aa1583b3297dc84b17.json  target-PokiRock_autogen-Debug-d054b04619b13a234f21.json
src/gui/qt_files/: Authorization_window.cpp  Authorization_window.h  Authorization_window.ui  First_window.cpp  First_window.h  First_window.ui  Main_menu.h  Main_menu.ui  Registration_window.cpp  Registration_window.h  Registration_window.ui  cards.qrc  clubs.qrc  diamonds.qrc  game.cpp  game.h  game.ui  hearts.qrc  main.cpp  origin.pro  other.qrc  resources.qrc  spades.qrc
src/proto/: build_proto.sh  game.grpc.pb.cc  game.grpc.pb.h  game.pb.cc  game.pb.h  game.proto  proto_commands.txt
src/qt_files/: Authorization_window.cpp  Authorization_window.h  Authorization_window.ui  CMakeLists.txt  First_window.cpp  First_window.h  First_window.ui  Main_menu.cpp  Main_menu.h  Main_menu.ui  Registration_window.cpp  Registration_window.h  Registration_window.ui  Window_manager.h  cards.qrc  clubs.qrc  cover.qrc  diamonds.qrc  game.cpp  game.h  game.ui  hearts.qrc  images.qrc  labels.qrc  main.cpp  origin.pro  other.qrc  resources.qrc  spades.qrc  user.h
src/server/: Card.cpp  Card.hpp  DataBase_connector.cpp  DataBase_connector.h  Game.cpp  Game.h  Server.cpp  Server.h  TODO.md  Win_check.cpp  Win_check.h  Win_probability.cpp  Win_probability.h  game.cpp  game.h  game_copy_for_server.cpp  game_copy_for_server.h  grpc_client.cpp  grpc_client.hpp  grpc_client_main.cpp  grpc_server.cpp  grpc_server.hpp  grpc_server_main.cpp  message.hpp  player.cpp  player.hpp  server.cpp  server.h  server_main.cpp  todo.md  unfair_plays.cpp  unfair_plays.h  win_check.cpp  win_check.h
src/server/connection_serts/: server.crt  server.csr  server.key
src/server/ssl_connection/: server.crt  server.csr  server.key
src/test/: CMakeLists.txt  database_scripts.sql
src/test/server/: test_card.cpp  test_define_combination.cpp  test_win_check.cpp  test_win_probability.cpp
test/: CMakeLists.txt  database_scripts.sql
test/server/: test_win_check.cpp
